<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <LinearLayout
        android:id="@+id/lay01"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_top" />
       
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_smallest"
        android:paddingBottom="@dimen/margin_smallest"
        android:layout_below="@+id/lay01"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_smallest"
            android:text="@string/contentPH_title"
            android:textColor="@color/orgph_title"  />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_content_listview_vertical"
            android:text="@string/contentPH_date"  />

       
    </LinearLayout>
 <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/lay02"
            android:layout_marginTop="@dimen/margin_smallest"
            android:background="@color/gray" />
    <LinearLayout
        android:id="@+id/lay03"
        android:layout_width="match_parent"
         android:paddingTop="@dimen/margin_smallest"
        android:paddingBottom="@dimen/margin_smallest"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_content_listview_vertical"
            android:text="@string/contentPH_detail"  />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <Button
            android:id="@+id/btnty"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:text="@string/viewPhws_btn"
            android:textColor="@color/white"
             android:textSize="@dimen/text_size_main_num"
            android:background="@drawable/ic_phbtn" />
    </LinearLayout>

   <RelativeLayout
       
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingTop="@dimen/margin_smallest"
        android:paddingBottom="@dimen/margin_smallest"
        android:orientation="horizontal"
        android:background="@color/ligwhite"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <ImageButton
            android:id="@+id/btnback"
            android:layout_centerVertical="true"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back" />
        
         <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_content_listview_vertical"
            android:text="@string/viewPH_title" />
    </RelativeLayout>
  

</RelativeLayout>
  </FrameLayout>
