<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/laytop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/ligwhite"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_smallest"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_smallest" >

        <ImageView
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/space_content_listview_vertical"
            android:text="@string/viewPhws_title"
            android:textSize="@dimen/text_size_main_num"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lay02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/laytop"
        android:orientation="vertical"
        android:paddingBottom="@dimen/content_top_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/content_top_margin" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_smallest"
            android:text="@string/contentPHws_title"
            android:textColor="@color/orgph_title"
            android:textSize="@dimen/text_size_main_num"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content"
            android:text="@string/contentPHws_detail"
            android:textSize="@dimen/text_size_main_num"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay02"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/content_top_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/content_top_margint" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contentPHws_btnsee"
            android:textSize="@dimen/text_size_main_num" />
    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/lay04"
        android:layout_marginTop="@dimen/margin_smallest"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/lay05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_small"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/content_top_marginlarge" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            
            android:background="@drawable/ic_phbtn" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_phlist" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:layout_toRightOf="@+id/imageView1"
                android:text="TextView" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lay05"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/ic_phbtn" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/ic_phlist" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:layout_toRightOf="@+id/imageView2"
                android:text="TextView" />

        </RelativeLayout>
       
    </LinearLayout>

    

</RelativeLayout>