<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <GridView
        android:id="@+id/gridphoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3" >
    </GridView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/laytop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/ligwhite"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_smallest"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/margin_smallest" >

            <Button
                android:id="@+id/btnback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_back" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/space_content_listview_vertical"
                android:text="@string/photo_sel"
                android:textSize="@dimen/text_size_main_num"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lay07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/lay05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
               
                android:paddingTop="@dimen/content_top_marginlarge" >

                <LinearLayout
                    android:id="@+id/laybtn01"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/content_top_marginlarge"
                    android:gravity="center_horizontal" >

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/content_top_marginlarge"
                        android:layout_weight="0.5"
                        
                    android:background="@color/orgbtn"
                        android:paddingRight="@dimen/margin_small" >

                      

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/cancel"
                            android:textSize="@dimen/text_size_start"
                            android:textColor="@color/white" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:id="@+id/upbtn"
                        android:layout_height="@dimen/content_top_marginlarge"
                        android:background="@color/orgbtn"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="0.5" >

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/upload"
                            android:textSize="@dimen/text_size_start"
                            android:textColor="@color/white" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>